--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section>Slide 1</section>
-        <section>Slide 2</section>
+        <section>ReactJS</section>
+        <section>wtf</section>
       </div>
     </div>
     <script src="reveal.js/js/reveal.js"></script>
